[tool.poetry]
name = "sqlclient"
version = "0.1.0"
description = ""
authors = ["yanyongyu <yanyongyu_1@126.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^1.0.2"
prettytable = "^2.0.0"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
